# Lehman

./: CMakeLists.txt  README.md
include/: dumb.hpp  lehman.hpp
src/: .main.cpp.swp  main.cpp
